--- a/source/sass/blocks/page-body.scss
+++ b/source/sass/blocks/page-body.scss
@@ -7,5 +7,5 @@
   line-height: 28px;
   font-weight: 400;
   color: $basic-text-color-fade;
-  background-color: $background-color;
+  background-color: $basic-white;
 }
