--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -5,7 +5,27 @@ $light-color: #f8f8f8;
 $basic-accent-color: #fe7865;
 $accent-color-hover: #f17d4b;
 $basic-text-color-fade: #2c2e3fb3;
-$background-color: #ffffff;
+$basic-white: #ffffff;
 $special-light-color: #dadada;
+$promo-background: #527d9d;
 $tablet-width: 768px;
 $desktop-width: 1920px;
+$size-10: 10px;
+$size-12: 12px;
+$size-14: 14px;
+$size-16: 16px;
+$size-18: 18px;
+$size-20: 20px;
+$size-24: 24px;
+$size-30: 30px;
+$size-55: 55px;
+$line-12: 12px;
+$line-15: 15px;
+$line-17: 17px;
+$line-26: 26px;
+$line-27: 27px;
+$line-28: 28px;
+$line-32: 32px;
+$line-36: 36px;
+$line-45: 45px;
+$line-80: 80px;
