--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -8,7 +8,7 @@
   margin: 0;
   padding: 0;
 
-  background-color: $background-color;
+  background-color: $basic-white;
 
   @media (min-width: $desktop-width) {
     padding-top: 36px;
