--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -1,4 +1,6 @@
 $dark-color: #2c2e3f;
+$dark-color-fade: rgba(44, 46, 63, 0.7);
+$dark-color-ultra-fade: rgba(44, 46, 63, 0.3);
 $dark-text-color: #48494d;
 $ultra-dark-color: #141517;
 $light-color: #f8f8f8;
@@ -8,6 +10,8 @@ $basic-text-color-fade: #2c2e3fb3;
 $basic-white: #ffffff;
 $special-light-color: #dadada;
 $promo-background: #527d9d;
+$link-color-fade: rgba(20, 21, 23, 0.6);
+$border-color: rgba(255, 255, 255, 0.7);
 $tablet-width: 768px;
 $desktop-width: 1920px;
 $size-10: 10px;
@@ -22,9 +26,11 @@ $size-55: 55px;
 $line-12: 12px;
 $line-15: 15px;
 $line-17: 17px;
+$line-24: 24px;
 $line-26: 26px;
 $line-27: 27px;
 $line-28: 28px;
+$line-29: 29px;
 $line-32: 32px;
 $line-36: 36px;
 $line-45: 45px;
