--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -7,4 +7,7 @@
 @import "blocks/logo.scss";
 @import "blocks/nav.scss";
 @import "blocks/promo.scss";
-
+@import "blocks/container.scss";
+@import "blocks/places.scss";
+@import "blocks/card.scss";
+@import "blocks/countries.scss";
