--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -26,6 +26,7 @@ $size-55: 55px;
 $line-12: 12px;
 $line-15: 15px;
 $line-17: 17px;
+$line-20: 20px;
 $line-24: 24px;
 $line-26: 26px;
 $line-27: 27px;
@@ -33,5 +34,7 @@ $line-28: 28px;
 $line-29: 29px;
 $line-32: 32px;
 $line-36: 36px;
+$line-37: 37px;
 $line-45: 45px;
 $line-80: 80px;
+$line-90: 90px;
