--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -10,4 +10,7 @@
 @import "blocks/container.scss";
 @import "blocks/places.scss";
 @import "blocks/card.scss";
+@import "blocks/tabs.scss";
 @import "blocks/countries.scss";
+@import "blocks/country.scss";
+@import "blocks/feedbacks.scss";
