--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -3,15 +3,20 @@ $dark-color-fade: rgba(44, 46, 63, 0.7);
 $dark-color-ultra-fade: rgba(44, 46, 63, 0.3);
 $dark-text-color: #48494d;
 $ultra-dark-color: #141517;
+$ultra-dark-color-fade: rgba(20, 21, 23, 0.7);
+$ultra-dark-color-halffade: rgba(20, 21, 23, 0.5);
 $light-color: #f8f8f8;
 $basic-accent-color: #fe7865;
 $accent-color-hover: #f17d4b;
 $basic-text-color-fade: #2c2e3fb3;
 $basic-white: #ffffff;
+$basic-black: #000000;
 $special-light-color: #dadada;
 $promo-background: #527d9d;
 $link-color-fade: rgba(20, 21, 23, 0.6);
 $border-color: rgba(255, 255, 255, 0.7);
+$footer-border-color: #d7d9df;
+$popup-background-color: #f8f8f8;
 $tablet-width: 768px;
 $desktop-width: 1920px;
 $size-10: 10px;
@@ -21,6 +26,7 @@ $size-16: 16px;
 $size-18: 18px;
 $size-20: 20px;
 $size-24: 24px;
+$size-25: 25px;
 $size-30: 30px;
 $size-55: 55px;
 $line-12: 12px;
@@ -33,8 +39,10 @@ $line-27: 27px;
 $line-28: 28px;
 $line-29: 29px;
 $line-32: 32px;
+$line-34: 34px;
 $line-36: 36px;
 $line-37: 37px;
+$line-43: 43px;
 $line-45: 45px;
 $line-80: 80px;
 $line-90: 90px;
