--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -14,3 +14,9 @@
 @import "blocks/countries.scss";
 @import "blocks/country.scss";
 @import "blocks/feedbacks.scss";
+@import "blocks/prices.scss";
+@import "blocks/rate.scss";
+@import "blocks/popup.scss";
+@import "blocks/form.scss";
+@import "blocks/questions.scss";
+@import "blocks/page-footer.scss";
