--- a/source/sass/blocks/feedbacks.scss
+++ b/source/sass/blocks/feedbacks.scss
@@ -13,19 +13,19 @@
   display: block;
   width: 100%;
   height: 415px;
-  background-image: url("../../img/feedbacks-back_mobile.jpg");
+  background-image: url("../../img/feedbacks-greece-back_mobile.jpg");
   background-repeat: no-repeat;
   background-size: cover;
 
   @media (min-resolution: 2dppx) {
-    background-image: url("../../img/feedbacks-back_mobile@2x.jpg");
+    background-image: url("../../img/feedbacks-greece-back_mobile@2x.jpg");
   }
 
   @media (min-width: $tablet-width) {
-    background-image: url("../../img/feedbacks-back_tablet.jpg");
+    background-image: url("../../img/feedbacks-greece-back_tablet.jpg");
 
     @media (min-resolution: 2dppx) {
-      background-image: url("../../img/feedbacks-back_tablet@2x.jpg");
+      background-image: url("../../img/feedbacks-greece-back_tablet@2x.jpg");
     }
   }
 
@@ -33,10 +33,10 @@
     width: 430px;
     height: 596px;
 
-    background-image: url("../../img/feedbacks-back_desktop.jpg");
+    background-image: url("../../img/feedbacks-greece-back_desktop.jpg");
 
     @media (min-resolution: 2dppx) {
-      background-image: url("../../img/feedbacks-back_desktop@2x.jpg");
+      background-image: url("../../img/feedbacks-greece-back_desktop@2x.jpg");
     }
   }
 }
@@ -51,7 +51,7 @@
   margin-right: auto;
   margin-bottom: 45px;
   margin-left: auto;
-  padding-top: 30px;
+  padding-top: 32px;
   padding-right: 20px;
   padding-bottom: 34px;
   padding-left: 20px;
@@ -61,7 +61,8 @@
   @media (min-width: $tablet-width) {
     width: 382px;
     margin-top: -335px;
-    margin-bottom: 80px;
+    margin-bottom: 69px;
+    padding-top: 30px;
     padding-right: 30px;
     padding-left: 30px;
     padding-bottom: 30px;
@@ -71,6 +72,7 @@
     margin-top: 114px;
     margin-bottom: 0;
     margin-left: -112px;
+    padding-bottom: 18px;
   }
 }
 
@@ -78,7 +80,7 @@
   position: relative;
 
   margin-top: 0;
-  margin-bottom: 31px;
+  margin-bottom: 32px;
   text-align: center;
 
   @include font-group-medium($size-20, $line-24);
@@ -87,7 +89,7 @@
   &::after {
     content: "";
     position: absolute;
-    bottom: -11px;
+    bottom: -12px;
     left: calc(50% - 34px);
 
     display: block;
@@ -98,10 +100,11 @@
   }
 
   @media (min-width: $tablet-width) {
-    margin-bottom: 32px;
+    margin-bottom: 33px;
     text-align: left;
 
     @include font-group-small($size-30, $line-37);
+    letter-spacing: -0.69px;
 
     &::after {
       left: 0;
@@ -110,7 +113,7 @@
 }
 
 .feedbacks__text {
-  margin-bottom: 20px;
+  margin-bottom: 17px;
   text-align: center;
 
   @include font-group($size-14, $line-28);
@@ -118,7 +121,7 @@
   letter-spacing: -0.41px;
 
   @media (min-width: $tablet-width) {
-    margin-bottom: 35px;
+    margin-bottom: 31px;
     text-align: left;
   }
 }
@@ -131,11 +134,14 @@
   @media (min-width: $tablet-width) {
     flex-direction: row;
     align-items: center;
+    padding-left: 1px;
   }
 }
 
 .feedbacks__user-photo {
-  margin-bottom: 1px;
+  margin-bottom: 2px;
+
+  border-radius: 50%;
 
   @media (min-width: $tablet-width) {
     margin-right: 16px;
@@ -144,6 +150,7 @@
 
 .feedbacks__user-name {
   @include font-group-medium($size-16, $line-20);
+  letter-spacing: -0.47px;
   color: $dark-color;
 
   @media (min-width: $tablet-width) {
