--- a/source/sass/blocks/questions.scss
+++ b/source/sass/blocks/questions.scss
@@ -34,7 +34,7 @@
 
 .questions__wrapper {
   width: 100%;
-  padding-top: 50px;
+  padding-top: 51px;
   padding-right: 16px;
   padding-bottom: 50px;
   padding-left: 16px;
@@ -44,9 +44,12 @@
 
   @media (min-width: $tablet-width) {
     width: 658px;
+    margin-right: auto;
+    margin-left: auto;
+    padding-top: 50px;
     padding-right: 49px;
-    padding-bottom: 49px;
-    padding-left: 49px;
+    padding-bottom: 50px;
+    padding-left: 50px;
 
     background-color: $basic-white;
     border-radius: 5px;
@@ -66,29 +69,38 @@
 
   @media (min-width: $tablet-width) {
     width: 350px;
+    margin-bottom: 12px;
   }
 }
 
 .questions__text {
   display: block;
-  margin-bottom: 20px;
+  margin-bottom: 19px;
   text-align: center;
 
   line-height: 24px;
   color: $ultra-dark-color;
 
   @media (min-width: $tablet-width) {
-    margin-bottom: 24px;
+    margin-bottom: 23px;
   }
 }
 
 .form__input--questions {
   display: inline-block;
   vertical-align: middle;
-  width: 268px;
+  width: 288px;
 
   &:first-of-type {
     margin-right: 19px;
+  }
+
+  @media (min-width: $tablet-width) {
+    width: 269px;
+
+    &:first-of-type {
+      margin-right: 16px;
+    }
   }
 
   @media (min-width: $desktop-width) {
@@ -99,15 +111,15 @@
 .form__submit--questions {
   @media (min-width: $tablet-width) {
     width: 250px;
-    padding-top: 19px;
-    padding-bottom: 19px;
+    padding-top: 20px;
+    padding-bottom: 18px;
 
     @include font-group-medium($size-10, $line-12);
 
   }
 
   @media (min-width: $desktop-width) {
-    width: 179px;
+    width: 176px;
     padding-top: 18px;
     padding-bottom: 17px;
 
@@ -117,32 +129,42 @@
 }
 
 .questions__feedback {
+  position: relative;
+
   display: none;
+  width: 320px;
+  margin-right: auto;
+  margin-left: auto;
 
   &--open {
+    position: fixed;
+    top: calc(50% - 260px);
+    left: calc(50% - 160px);
+    z-index: 500;
+
     display: block;
-  }
 
-  @media (min-width: $tablet-width) {
-    position: absolute;
-    top: calc(50% - 222px);
-    left: calc(50% - 360px);
+    @media (min-width: $tablet-width) {
+      position: absolute;
+      top: calc(50% - 222px);
+      left: calc(50% - 360px);
 
-    width: 720px;
-    padding-top: 179px;
-    padding-right: 160px;
-    padding-bottom: 179px;
-    padding-left: 161px;
+      width: 720px;
+      padding-top: 179px;
+      padding-right: 160px;
+      padding-bottom: 179px;
+      padding-left: 161px;
 
-    background-color: $popup-background-color;
-  }
+      background-color: $popup-background-color;
+    }
 
-  @media (min-width: $desktop-width) {
-    left: calc(50% - 364px);
+    @media (min-width: $desktop-width) {
+      left: calc(50% - 364px);
 
-    width: 728px;
-    padding-right: 164px;
-    padding-left: 165px;
+      width: 728px;
+      padding-right: 164px;
+      padding-left: 165px;
+    }
   }
 }
 
