--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -31,6 +31,7 @@ $size-30: 30px;
 $size-55: 55px;
 $line-12: 12px;
 $line-15: 15px;
+$line-16: 16px;
 $line-17: 17px;
 $line-20: 20px;
 $line-24: 24px;
